<resources>
    <string name="app_name">AndroidFootRegion</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Configuration</string>
    <string name="action_settings">Configuration</string>
    <string name="title_mes_preferences">Mes préférences</string>

    <string name="pref_title_api">API utilisée</string>
    <string-array name="pref_api_list_titles">
        <item>Locale</item>
        <item>Distante</item>
    </string-array>
    <string-array name="pref_api_list_values">
        <item>"0"</item>
        <item>"1"</item>
    </string-array>
    <string name="pref_title_api_url_loc">URL locale de l\'API</string>
    <string name="pref_default_api_url_loc">172.18.17.127/footregion/api</string>
    <!-- <string name="pref_default_api_url_loc">192.168.1.219/footregion/api</string> -->
    <string name="pref_title_api_url_dist">URL distante de l\'API</string>
    <string name="pref_default_api_url_dist">www.lla-sio.com/footregion/api</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
